--- a/src/sass/components/_column.scss
+++ b/src/sass/components/_column.scss
@@ -3,7 +3,7 @@
     border: 1px solid black;
     padding: 0.5rem;
 
-    .column-header {
+    .col-header {
         display: flex;
         justify-content: space-between;
     }
